Fix dt/ bug and other bugs in EditPreviewBuilder